--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -40,11 +40,28 @@ header, header a
 }
 
 /* Removes all formatting from the nav */
-nav ul li, #navigation a
+nav ul li, #navigation a, #logo a
 {
   list-style-type:none;
   display:inline;
   text-decoration:none;
+}
+
+@keyframes lineAnim
+{
+  25% {border-color:white;}
+  50% {border-color:#3399ff;}
+  75% {border-color:white;}
+  100% {border-color:#3366cc;}
+}
+
+/*Animation for when the user hovers over the navigation*/
+#navigation ul li a:hover
+{
+  animation-name:lineAnim;
+  animation-duration:3s;
+  animation-iteration-count:infinite;
+  border-bottom:3px solid #3366cc;
 }
 
 /*Created a small space inbetween navigation list elements*/
@@ -78,4 +95,18 @@ nav
   float:right;
   width:50%;
   text-align:right;
+}
+
+@keyframes hrAnim
+{
+    from{width:0%;}
+    to{width:100%;}
+}
+
+hr
+{
+  animation-name:hrAnim;
+  animation-duration:3s;
+  height:3px;
+  background-color:black;
 }
