--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -42,11 +42,11 @@ header, header a
   color:white;
 }
 
-/*Style for footer*/
-
+/*Style for footer*/ /*More styling in seperate files*/
 footer p, footer a, footer p span a
 {
   margin-left:3em;
+  margin-right:3em;
 }
 
 /* Removes all formatting from the nav */
@@ -106,4 +106,9 @@ header nav
   float:right;
   width:50%;
   text-align:right;
+}
+
+h3 span
+{
+  border-bottom:0.07em solid black;
 }
