--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,10 @@
 .navbar-nav {
   margin-right: 0.7em; }
 
+.education-img {
+  width: 5em;
+  height: 5em; }
+
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
