--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,4 +18,9 @@ $theme-colors: (
     margin-right:0.7em;
 }
 
+.education-img {
+    width: 5em;
+    height: 5em;
+}
+
 @import "../../node_modules/bootstrap/scss/bootstrap";
