--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,10 +1,10 @@
+$theme-colors: (
+    "primary": #7f48e6
+);
+
 $body-bg: rgb(226, 226, 226);
 
 $card-height: 90%;
-
-$theme-colors: (
-    "primary": rgb(127, 72, 230)
-);
 
 .jumbotron {
     background-color: #ffffff !important;
@@ -18,9 +18,13 @@ $theme-colors: (
     margin-right:0.7em;
 }
 
+.navbar {
+    margin-bottom:1em;
+}
+
 .education-img {
     width: 5em;
     height: 5em;
 }
 
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
