updated to bootstrap 5 and reorganized pages
Updated to bootstrap5 and react-bootstrap 2.0.0-beta4. Recreated jumbotron because of its removal in bootstrap5 and moved Home and Projects pages to the Pages folder

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,4 @@
-$theme-colors: (
-    "primary": #7f48e6
-);
+$primary: #7f48e6;
 
 $body-bg: rgb(233, 232, 232);
 
@@ -25,6 +23,10 @@ $card-height: 90%;
 .education-img {
     width: 5em;
     height: 5em;
+}
+
+.card-link {
+    color: $primary;
 }
 
 @import "~bootstrap/scss/bootstrap";
