added github link to navbar and updated home page info

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -25,6 +25,11 @@ $card-height: 90%;
     height: 5em;
 }
 
+.navbarImages {
+    width:1.5em;
+    height:1.5em;
+}
+
 .card-link {
     color: $primary;
 }
